data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1995.wast
;; 6. **Test: Loop to Imported Function Call with `br_if` Backward Jump**    - **Constraint Checked:** Ensure `br_if` correctly handles backward jumps in loops calling imported functions, maintaining valid stack states.    - **Description:** Use a loop in the caller module that conditionally calls an imported function with `br_if`. Validate that the backward jump via `br_if` works correctly, looping as expected.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func))
    (func (export "test_func")
      (loop $loop
        (call $external_func)
        (i32.const 1)
        (br_if $loop (i32.const 1))
      )
    )
  )
  "invalid stack state"
)